# LR_assumption_test

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/LR_assumption_test/: __init__.py
tests/: test_LR_assumption_test.py
